versions/v4.0.0/boards/st/nucleo_l433rc_p/doc/index.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/boards/st/nucleo_l433rc_p/doc/index.html
original_path: boards/st/nucleo_l433rc_p/doc/index.html
---

# Nucleo L433RC

Board Overview

[![../../../../_images/nucleo_l433rc_p.jpg](https://docs.zephyrproject.org/4.0.0/_images/nucleo_l433rc_p.jpg)
](https://docs.zephyrproject.org/4.0.0/_images/nucleo_l433rc_p.jpg)

Nucleo L433RC

Vendor:
:   STMicroelectronics

Architecture:
:   arm

SoC:
:   stm32l433xx

## Overview

The Nucleo L433RC board features an ARM Cortex-M4 based STM32L433RC MCU
with a wide range of connectivity support and configurations. Here are
some highlights of the Nucleo L433RC board:

- STM32 microcontroller in LQFP64 package
- Arduino Uno V3 connectivity
- On-board ST-LINK/V2-1 debugger/programmer with SWD connector
- Flexible board power supply:

  - USB VBUS or external source(3.3V, 5V, 7 - 12V)
  - Power management access point
- Three LEDs: USB communication (LD1), power LED (LD3), user LED (LD4)
- One push-button: RESET

More information about the board can be found at the [Nucleo L433RC-P website](https://www.st.com/en/evaluation-tools/nucleo-l433rc-p.html).

## Hardware

The STM32L433RC SoC provides the following hardware IPs:

- Ultra-low-power with FlexPowerControl (down to 28 nA Standby mode and 84
  µA/MHz run mode)
- Core: ARM® 32-bit Cortex® -M4 CPU with FPU, frequency up to 80 MHz,
  100DMIPS/1.25DMIPS/MHz (Dhrystone 2.1)
- Clock Sources:

  - 32 kHz crystal oscillator for RTC (LSE)
  - Internal 16 MHz factory-trimmed RC ( ±1%)
  - Internal low-power 32 kHz RC ( ±5%)
  - Internal multispeed 100 kHz to 48 MHz oscillator, auto-trimmed by
    LSE (better than ±0.25 % accuracy)
  - 2 PLLs for system clock, USB, audio, ADC
- RTC with HW calendar, alarms and calibration
- Up to 21 capacitive sensing channels: support touchkey, linear and rotary touch sensors
- 11x timers:

  - 1x 16-bit advanced motor-control
  - 1x 32-bit and 2x 16-bit general purpose
  - 2x 16-bit basic
  - 2x low-power 16-bit timers (available in Stop mode)
  - 2x watchdogs
  - SysTick timer
- Up to 83 fast I/Os, most 5 V-tolerant
- Memories

  - Up to 256 KB single bank Flash, proprietary code readout protection
  - 64 KB of SRAM including 16 KB with hardware parity check
  - Quad SPI memory interface
- Rich analog peripherals (independent supply)

  - 1x 12-bit ADC 5 MSPS, up to 16-bit with hardware oversampling, 200
    µA/MSPS
  - 2x 12-bit DAC output channels, low-power sample and hold
  - 1x operational amplifiers with built-in PGA
  - 2x ultra-low-power comparators
- 17x communication interfaces

  - USB 2.0 full-speed crystal less solution with LPM and BCD
  - 1x SAI (serial audio interface)
  - 3x I2C FM+(1 Mbit/s), SMBus/PMBus
  - 4x USARTs (ISO 7816, LIN, IrDA, modem)
  - 1x LPUART (Stop 2 wake-up)
  - 3x SPIs (and 1x Quad SPI)
  - CAN (2.0B Active) and SDMMC interface
  - SWPMI single wire protocol master I/F
  - IRTIM (Infrared interface)
- 14-channel DMA controller
- True random number generator
- CRC calculation unit, 96-bit unique ID
- Development support: serial wire debug (SWD), JTAG, Embedded Trace Macrocell\*

More information about STM32L433RC can be found here:

- [STM32L433RC on www.st.com](https://www.st.com/en/microcontrollers-microprocessors/stm32l433rc.html)
- [STM32L432 reference manual](https://www.st.com/resource/en/reference_manual/dm00151940.pdf)

### Supported Features

The Zephyr nucleo\_l433rc\_p board configuration supports the following hardware features:

| Interface | Controller | Driver/Component |
| --- | --- | --- |
| NVIC | on-chip | nested vector interrupt controller |
| UART | on-chip | serial port-polling; serial port-interrupt |
| PINMUX | on-chip | pinmux |
| GPIO | on-chip | gpio |
| I2C | on-chip | i2c |
| PWM | on-chip | pwm |
| CAN | on-chip | can |
| SPI | on-chip | spi |

Note

CAN feature requires CAN transceiver

Other hardware features are not yet supported on this Zephyr port.

The default configuration can be found in the defconfig file:
[boards/st/nucleo\_l433rc\_p/nucleo\_l433rc\_p\_defconfig](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/st/nucleo_l433rc_p/nucleo_l433rc_p_defconfig)

### Connections and IOs

Nucleo L433RC-P Board has 6 GPIO controllers. These controllers are responsible for pin muxing,
input/output, pull-up, etc.

#### Available pins:

![Nucleo L433RC-P](https://docs.zephyrproject.org/4.0.0/_images/nucleo_l433rc_p_pinout.jpg)

For more details please refer to [ST Nucleo L433RC-P User Manual](https://www.st.com/resource/en/user_manual/dm00387966.pdf).

#### Default Zephyr Peripheral Mapping:

- LPUART\_1\_TX : PA2
- LPUART\_1\_RX : PA3
- UART\_1\_TX : PA9
- UART\_1\_RX : PA10
- I2C\_1\_SCL : PB6
- I2C\_1\_SDA : PB7
- PWM\_2\_CH1 : PA0
- LD4 : PB13
- SPI\_1: NSS/SCK/MISO/MOSI : PA4/PA5/PA6/PA7
- SPI\_2: NSS/SCK/MISO/MOSI : PA11/PB13/PB14/PB15 (Arduino SPI)

#### System Clock

Nucleo L433RC-P System Clock could be driven by internal or external oscillator,
as well as main PLL clock. By default System clock is driven by PLL clock at 80MHz,
driven by 16MHz high speed internal oscillator.

#### Serial Port

Nucleo L433RC-P board has 4 U(S)ARTs and 1 LPUART. The Zephyr console output is assigned
to LPUART1. Default settings are 115200 8N1.

## Programming and Debugging

Nucleo L433RC-P board includes an ST-LINK/V2-1 embedded debug tool interface.

Applications for the `nucleo_l433rc_p` board configuration can be built and
flashed in the usual way (see [Building an Application](../../../../develop/application/index.md#build-an-application) and
[Run an Application](../../../../develop/application/index.md#application-run) for more details).

### Flashing

The board is configured to be flashed using west [STM32CubeProgrammer](https://www.st.com/en/development-tools/stm32cubeprog.html) runner,
so its [installation](../../../../develop/flash_debug/host-tools.md#stm32cubeprog-flash-host-tools) is required.

Alternatively, OpenOCD or JLink can also be used to flash the board using
the `--runner` (or `-r`) option:

```shell
$ west flash --runner openocd
$ west flash --runner jlink
```

#### Flashing an application to Nucleo L433RC-P

Connect the Nucleo L433RC-P to your host computer using the USB port,
then run a serial host program to connect with your Nucleo board.

```shell
$ picocom /dev/ttyACM0 -b 115200
```

Now build and flash an application. Here is an example for
[Hello World](../../../../samples/hello_world/README.md#hello_world "Print "Hello World" to the console.").

```shell
# From the root of the zephyr repository
west build -b nucleo_l433rc_p samples/hello_world
west flash
```

You should see the following message on the console:

```shell
$ Hello World! nucleo_l433rc_p
```

### Debugging

You can debug an application in the usual way. Here is an example for the
[Hello World](../../../../samples/hello_world/README.md#hello_world "Print "Hello World" to the console.") application.

```shell
# From the root of the zephyr repository
west build -b nucleo_l433rc_p samples/hello_world
west debug
```
